<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        style="@style/PageTitle"
        android:id="@+id/main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/main_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        style="@style/AppTheme"
        android:id="@+id/departure_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_text" />

    <Spinner
        style="@style/AppTheme"
        android:id="@+id/arrival_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/departure_spinner" />

    <TextView
        style="@style/ClickableText"
        android:id="@+id/advanced_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/advanced_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrival_spinner" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/results_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/advanced_search">
        <Button
            style="@style/MiniButton"
            android:id="@+id/selected_time"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:visibility="gone"
            tools:text="16/9, 9:30"
            app:layout_constraintRight_toLeftOf="@id/selected_adults"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            style="@style/MiniButton"
            android:id="@+id/selected_adults"
            android:layout_marginTop="15dp"
            android:visibility="gone"
            tools:text="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            style="@style/MiniButton"
            android:id="@+id/selected_children"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:visibility="gone"
            tools:text="3"
            app:layout_constraintLeft_toRightOf="@id/selected_adults"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        style="@style/StandardButton"
        android:id="@+id/button"
        android:layout_marginTop="15dp"
        android:text="@string/find_journeys_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/results_bar"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/departures_table"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:layout_editor_absoluteX="16dp"/>

    <ProgressBar
        android:id="@+id/loading_spinner"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/departures_table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/departures_table" />


</androidx.constraintlayout.widget.ConstraintLayout>